--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
             </div>
             <div class="heading-text">
                 <div class="heading-text-front">
-                    <h1>Social Influencer's, <br>
-                        favourite MARKETPLACE</h1>
+                    <h1>Unified Marketplace <br>
+                        from social influencers</h1>
                 </div>
                 <div class="heading-text-back">
-                    <h1>Social Influencer's, <br>
-                        favourite MARKETPLACE</h1>
+                    <h1>Unified Marketplace <br>
+                        from social influencers</h1>
                 </div>
             </div>
         </div>
@@ -147,12 +147,12 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="abt-text">
-                            <p>We created our app to manage your brand easily, reaching the people around your city more easily. Promote products
-                                and branding assets to them and get the analytics we have generated from your promotion.
+                            <p>We created our app to promote your brand easily, reaching the people around your city more easily. Promote products
+                                and essentials to them and deliver them quickly through our network.
 
-                                With a wide set of skills and an extended network of specialists we function as
-                                a scalable and fully operative team.</p>
-                            <a class="hover-target load-spiral" href="about.html">Explore more</a>
+                                With very small push reach millions of users across canada and an extended your brand visibility and empoweras 
+                                a scalable and fully operative brand.</p>
+                            <a class="hover-target load-spiral" href="#">A little about our platform</a>
                         </div>
 
                     </div>
@@ -170,32 +170,32 @@
                     <div class="col-md-12">
                         <div class="main-title text-center">
 
-                            <h2>Projects from the <span>Studio</span></h2>
+                            <h2>What can be <span>Achieved</span></h2>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="folio-item">
 
                             <div class="img-folio cursorExplore">
-                                <a class="load-spiral" href="work-detail-2.html">
+                                <!-- <a class="load-spiral" href="#"> -->
                                     <img class="img-fluid" src="assets/img/port/2.jpg" draggable="false" alt="">
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="text-folio text-center">
-                                <h2 class="text-1">OLDMAN</h2>
-                                <h2 class="text-2">OLDMAN</h2>
+                                <h2 class="text-1">FOR FANS</h2>
+                                <h2 class="text-2">FOR FANS</h2>
                             </div>
                         </div>
                         <div class="folio-item">
 
                             <div class="img-folio cursorExplore">
-                                <a class="load-spiral" href="work-detail.html">
+                                <!-- <a class="load-spiral" href="#"> -->
                                     <img class="img-fluid" src="assets/img/port/1.jpg" draggable="false" alt="">
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="text-folio text-center">
-                                <h2 class="text-1">SMITHY</h2>
-                                <h2 class="text-2">SMITHY</h2>
+                                <h2 class="text-1">TRENDING DESIGNS</h2>
+                                <h2 class="text-2">TRENDING DESIGNS</h2>
                             </div>
                         </div>
                     </div>
@@ -204,26 +204,26 @@
                         <div class="folio-item">
 
                             <div class="img-folio cursorExplore">
-                                <a class="load-spiral" href="work-detail.html">
+                                <!-- <a class="load-spiral" href="#"> -->
                                     <img class="img-fluid" src="assets/img/port/3.jpg" draggable="false" alt="">
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="text-folio text-center">
-                                <h2 class="text-1">DETECTIVE</h2>
-                                <h2 class="text-2">DETECTIVE</h2>
+                                <h2 class="text-1">INSTANT DELIVERY</h2>
+                                <h2 class="text-2">INSTANT DELIVERY</h2>
                             </div>
                         </div>
 
                         <div class="folio-item">
 
                             <div class="img-folio cursorExplore">
-                                <a class="load-spiral" href="work-detail-2.html">
+                                <!-- <a class="load-spiral" href="#"> -->
                                     <img class="img-fluid" src="assets/img/port/4.jpg" draggable="false" alt="">
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="text-folio text-center">
-                                <h2 class="text-1">SHANGHAI</h2>
-                                <h2 class="text-2">SHANGHAI</h2>
+                                <h2 class="text-1">ANALYTICS</h2>
+                                <h2 class="text-2">ANALYTICS</h2>
                             </div>
                         </div>
                     </div>
@@ -231,10 +231,10 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="work.html" class="next-project centered text-center load-spiral">
+                        <a href="#" class="next-project centered text-center load-spiral">
                             <div class="col-md-12">
                                 <p>View</p>
-                                <h3>ALL PROJECTS</h3>
+                                <h3>ON APP STORE</h3>
                             </div>
                         </a>
                     </div>
@@ -252,7 +252,7 @@
                 <div class="row">
                     <div class="col-md-4 text-center text-md-left mt-30">
                         <div class="mail hover-target">
-                            <a href="#">hello@spiral.design</a>
+                            <a href="#">hello@estucy.com</a>
                         </div>
                     </div>
                     <div class="col-md-4 text-center mt-30">
@@ -270,8 +270,7 @@
                             </ul>
                         </div>
                         <div class="copyright">
-                            <p>Sambat &copy;2019. All Rights Reserved</p>
-                            <p>Made with ♥ by Esensifiksi.</p>
+                            <p>Estucy &copy;2021. All Rights Reserved</p>
                         </div>
                     </div>
                 </div>
