--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="assets/css/plugin.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="icon" href="assets/img/favicon.png" type="image/gif" sizes="16x16">
+    <!-- metas for search engine -->
+    <meta name="title" content="unified marketplace for influencers">
+    <meta name="description" content="find the best deals in your city using our app. Also find out whats the trending designs from influencers.">
+    <meta name="keywords" content="estucy, multi-vendor ecommerce, multivendor canada, canada ecommerce, best deals in canada, estucy app">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="30 days">
+    <!-- end metas for search engine -->
 </head>
 
 <body>
@@ -34,13 +44,13 @@
                 <a class="load-spiral" href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
             </div>
             <!-- Menu bar -->
-            <div class="toggle-btn magnetic hover-target">
+            <!-- <div class="toggle-btn magnetic hover-target">
                 <div class="burger-menu">
                     <span class="one"></span>
                     <span class="two"></span>
                     <span class="tre"></span>
                 </div>
-            </div>
+            </div> -->
             <!-- Social -->
             <div class="scr socials">
                 <div class="list-social">
@@ -92,9 +102,8 @@
 
                                 <div class="col-md-4 offset-md-2 centered text-right">
                                     <div class="address-menu">
-
-                                        <h3>SAMBAT DESIGN STUDIO</h3>
-                                        <h4>Flower 03/11 Street Klaten, Central Java, Indonesia</h4>
+                                        <h3>ESTUCY</h3>
+                                        <h4>Toronto, Canada</h4>
                                     </div>
                                 </div>
                             </div>
@@ -263,10 +272,10 @@
                     <div class="col-md-4 text-center text-md-right mt-30">
                         <div class="sosmed">
                             <ul>
-                                <li class="hover-target"><a href="#">Dribbble.</a></li>
+                                <li class="hover-target"><a href="#">Facebook.</a></li>
                                 <li class="hover-target"><a href="#">Twitter.</a></li>
                                 <li class="hover-target"><a href="#">Instagram.</a></li>
-                                <li class="hover-target"><a href="#">Behance.</a></li>
+                                <li class="hover-target"><a href="#">Linkedin.</a></li>
                             </ul>
                         </div>
                         <div class="copyright">
@@ -281,19 +290,16 @@
     <!-- End Content -->
 
     <!-- Toggle menu -->
-    <!-- <div class="menus">
+    <div class="menus">
         <a class="hover-target" href="index.html">Home</a>
-        <a class="hover-target" href="index-2.html">Home Slider</a>
-        <a class="hover-target" href="index-3.html">Home Image</a>
-        <a class="hover-target" href="work.html">Work</a>
+        <!-- <a class="hover-target" href="work.html">Work</a> -->
         <a class="hover-target" href="about.html">About</a>
-        <a class="hover-target" href="work-detail.html">Work Detail</a>
-        <a class="hover-target" href="work-detail-2.html">Work Detail 2</a>
-        <a class="hover-target" href="blog.html">Blog</a>
-        <a class="hover-target" href="blog-detail.html">Blog Detail</a>
-        <a class="hover-target" href="error.html">Error 404 Page</a>
+        <a class="hover-target" href="#">User Terms</a>
+        <a class="hover-target" href="#">Privacy Policy</a>
+        <!-- <a class="hover-target" href="blog.html">Blog</a> -->
+        <!-- <a class="hover-target" href="blog-detail.html">Blog Detail</a> -->
     </div> -->
-    <!-- <div class="menu__toggler hover-target magnetic"><span></span></div> -->
+    <div class="menu__toggler hover-target magnetic"><span></span></div>
 
     <!-- Cursor -->
     <div class="cursor1" id="cursor1"></div>
