user terms, privacy-policy

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sambat Dark - About</title>
+    <title>Estucy- About</title>
     <link rel="stylesheet" href="assets/css/plugin.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
@@ -55,7 +55,7 @@
 
             <!-- Copyright -->
             <div class="scr copyright-top">
-                <p>Sambat &copy; 2019</p>
+                <p>Estucy &copy; 2021</p>
             </div>
 
             <div class="bg-nav"></div>
@@ -292,7 +292,7 @@
                 <div class="row">
                     <div class="col-md-4 text-center text-md-left mt-30">
                         <div class="mail hover-target">
-                            <a href="#">hello@spiral.design</a>
+                            <a href="#">hello@estucy.com</a>
                         </div>
                     </div>
                     <div class="col-md-4 text-center mt-30">
@@ -310,8 +310,7 @@
                             </ul>
                         </div>
                         <div class="copyright">
-                            <p>Sambat &copy;2019. All Rights Reserved</p>
-                            <p>Made with ♥ by Esensifiksi.</p>
+                            <p>Estucy &copy;2021. All Rights Reserved</p>
                         </div>
                     </div>
                 </div>
@@ -324,15 +323,11 @@
     <!-- Toggle menu -->
     <div class="menus">
         <a class="hover-target" href="index.html">Home</a>
-        <a class="hover-target" href="index-2.html">Home Slider</a>
-        <a class="hover-target" href="index-3.html">Home Image</a>
-        <a class="hover-target" href="work.html">Work</a>
+        <!-- <a class="hover-target" href="work.html">Work</a> -->
         <a class="hover-target" href="about.html">About</a>
-        <a class="hover-target" href="work-detail.html">Work Detail</a>
-        <a class="hover-target" href="work-detail-2.html">Work Detail 2</a>
-        <a class="hover-target" href="blog.html">Blog</a>
-        <a class="hover-target" href="blog-detail.html">Blog Detail</a>
-        <a class="hover-target" href="error.html">Error 404 Page</a>
+        <a class="hover-target" href="#">Start your business</a>
+        <a class="hover-target" href="/user-terms">User Terms</a>
+        <a class="hover-target" href="/privacy-policy">Privacy Policy</a>
     </div>
     <div class="menu__toggler hover-target magnetic"><span></span></div>
 
