--- a/index.html
+++ b/index.html
@@ -294,8 +294,9 @@
         <a class="hover-target" href="index.html">Home</a>
         <!-- <a class="hover-target" href="work.html">Work</a> -->
         <a class="hover-target" href="about.html">About</a>
-        <a class="hover-target" href="#">User Terms</a>
-        <a class="hover-target" href="#">Privacy Policy</a>
+        <a class="hover-target" href="#">Start your business</a>
+        <a class="hover-target" href="/user-terms">User Terms</a>
+        <a class="hover-target" href="/privacy-policy">Privacy Policy</a>
         <!-- <a class="hover-target" href="blog.html">Blog</a> -->
         <!-- <a class="hover-target" href="blog-detail.html">Blog Detail</a> -->
     </div> -->
