--- a/about.html
+++ b/about.html
@@ -34,13 +34,13 @@
                 <a class="load-spiral" href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
             </div>
             <!-- Menu bar -->
-            <div class="toggle-btn magnetic hover-target">
+            <!-- <div class="toggle-btn magnetic hover-target">
                 <div class="burger-menu">
                     <span class="one"></span>
                     <span class="two"></span>
                     <span class="tre"></span>
                 </div>
-            </div>
+            </div> -->
             <!-- Social -->
             <div class="scr socials">
                 <div class="list-social">
@@ -93,8 +93,8 @@
                                 <div class="col-md-4 offset-md-2 centered text-right">
                                     <div class="address-menu">
 
-                                        <h3>SAMBAT DESIGN STUDIO</h3>
-                                        <h4>Flower 03/11 Street Klaten, Central Java, Indonesia</h4>
+                                        <h3>Estucy</h3>
+                                        <!-- <h4>Flower 03/11 Street Klaten, Central Java, Indonesia</h4> -->
                                     </div>
                                 </div>
                             </div>
@@ -169,7 +169,7 @@
                     <div class="col-lg-12">
                         <div class="main-title text-center">
 
-                            <h2>Our Areas of <span>Services</span></h2>
+                            <h2>Our platform <span>Offers</span></h2>
                         </div>
                     </div>
                 </div>
@@ -179,13 +179,13 @@
                         <div class="service-item">
 
                             <div class="service-text">
-                                <h3>GRAPHIC DESIGN</h3>
-                                <p>Put your eyes on your customers while keeping a graphic and aesthetic coherence. </p>
+                                <h3>Influencers</h3>
+                                <p>Grow your product sell in unique way and reach millions quickly </p>
                                 <div class="service-line"></div>
                                 <ul class="service-list">
-                                    <li>Logo Design</li>
-                                    <li>UI/UX</li>
-                                    <li>Illustration</li>
+                                    <li>Product Promotion</li>
+                                    <li>Subscription selling</li>
+                                    <li>Product shipping</li>
                                 </ul>
                             </div>
                         </div>
@@ -195,13 +195,13 @@
                         <div class="service-item">
 
                             <div class="service-text">
-                                <h3>DEVELOPMENT</h3>
-                                <p>Put your eyes on your customers while keeping a graphic and aesthetic coherence. </p>
+                                <h3>Apparel Designers</h3>
+                                <p>Find the trending designs and insights about collections </p>
                                 <div class="service-line"></div>
                                 <ul class="service-list">
-                                    <li>Website</li>
-                                    <li>Mobile App</li>
-                                    <li>Desktop App</li>
+                                    <li>Market Analytics</li>
+                                    <li>Trending Collection</li>
+                                    <li>Predictive Growth</li>
                                 </ul>
                             </div>
                         </div>
@@ -211,13 +211,13 @@
                         <div class="service-item">
 
                             <div class="service-text">
-                                <h3>BRANDING</h3>
-                                <p>Put your eyes on your customers while keeping a graphic and aesthetic coherence. </p>
+                                <h3>Brands</h3>
+                                <p>Get your ambassador and promote to the users in more social way. </p>
                                 <div class="service-line"></div>
                                 <ul class="service-list">
-                                    <li>Logo Design</li>
-                                    <li>UI/UX</li>
-                                    <li>Illustration</li>
+                                    <li>Influencer Insights</li>
+                                    <li>Market Analytics</li>
+                                    <li>Enterprise Insights</li>
                                 </ul>
                             </div>
                         </div>
