partners added in home

--- a/about.html
+++ b/about.html
@@ -326,8 +326,8 @@
         <!-- <a class="hover-target" href="work.html">Work</a> -->
         <a class="hover-target" href="about.html">About</a>
         <a class="hover-target" href="#">Start your business</a>
-        <a class="hover-target" href="/user-terms">User Terms</a>
-        <a class="hover-target" href="/privacy-policy">Privacy Policy</a>
+        <a class="hover-target" href="/user-terms.html">User Terms</a>
+        <a class="hover-target" href="/privacy-policy.html">Privacy Policy</a>
     </div>
     <div class="menu__toggler hover-target magnetic"><span></span></div>
 
