--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="abt-text">
-                            <p>We created our app to promote your brand easily, reaching the people around your city more easily. Promote products
-                                and essentials to them and deliver them quickly through our network.
+                            <p>From the idea of story to purchase we have created our app, reaching the people around your city more easily. Promote products
+                                and essentials to them and deliver them quickly through our social.
 
                                 With very small push reach millions of users across canada and an extended your brand visibility and empoweras 
                                 a scalable and fully operative brand.</p>
@@ -179,7 +179,7 @@
                     <div class="col-md-12">
                         <div class="main-title text-center">
 
-                            <h2>What can be <span>Achieved</span></h2>
+                            <h2>What's inside <span>Estucy</span></h2>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -251,7 +251,64 @@
 
             </div>
         </section>
+        
+        <!-- partners   -->
+        
+        <section class="partner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="main-title text-center">
 
+                            <h2>Platform <span>Partner</span></h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row mt-50">
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-5.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-6.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6 px-0">
+                        <div class="partner-list">
+                            <img class="img-fluid" src="assets/img/partner/client-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
