start a business page added

--- a/about.html
+++ b/about.html
@@ -325,7 +325,7 @@
         <a class="hover-target" href="index.html">Home</a>
         <!-- <a class="hover-target" href="work.html">Work</a> -->
         <a class="hover-target" href="about.html">About</a>
-        <a class="hover-target" href="#">Start your business</a>
+        <a class="hover-target" href="start-a-business.html">Start your business</a>
         <a class="hover-target" href="/user-terms.html">User Terms</a>
         <a class="hover-target" href="/privacy-policy.html">Privacy Policy</a>
     </div>
