--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="#" class="next-project centered text-center load-spiral">
+                        <a href="https://apps.apple.com/gb/app/estucy/id1588943765" target="_blank" class="next-project centered text-center load-spiral">
                             <div class="col-md-12">
                                 <p>View</p>
                                 <h3>ON APP STORE</h3>
@@ -351,7 +351,7 @@
         <a class="hover-target" href="index.html">Home</a>
         <!-- <a class="hover-target" href="work.html">Work</a> -->
         <a class="hover-target" href="about.html">About</a>
-        <a class="hover-target" href="#">Start your business</a>
+        <a class="hover-target" href="start-a-business.html">Start your business</a>
         <a class="hover-target" href="/user-terms">User Terms</a>
         <a class="hover-target" href="/privacy-policy">Privacy Policy</a>
         <!-- <a class="hover-target" href="blog.html">Blog</a> -->
