--- a/user-terms.html
+++ b/user-terms.html
@@ -253,7 +253,7 @@
         <a class="hover-target" href="index.html">Home</a>
         <!-- <a class="hover-target" href="work.html">Work</a> -->
         <a class="hover-target" href="about.html">About</a>
-        <a class="hover-target" href="#">Start your business</a>
+        <a class="hover-target" href="start-a-business.html">Start your business</a>
         <a class="hover-target" href="/user-terms">User Terms</a>
         <a class="hover-target" href="/privacy-policy">Privacy Policy</a>
     </div>
