start a busines updated

--- a/start-a-business.html
+++ b/start-a-business.html
@@ -34,13 +34,13 @@
                 <a class="load-spiral" href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
             </div>
             <!-- Menu bar -->
-            <div class="toggle-btn magnetic hover-target">
+            <!-- <div class="toggle-btn magnetic hover-target">
                 <div class="burger-menu">
                     <span class="one"></span>
                     <span class="two"></span>
                     <span class="tre"></span>
                 </div>
-            </div>
+            </div> -->
             <!-- Social -->
             <div class="scr socials">
                 <div class="list-social">
